--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
 					<h2>About Me</h2>
 					<p>My name is Julius Gomez I am a 4th year art major at UCSC. I started off my 1st year as a Computer
-						Engineering major.
+						Engineering major. I focus in visual effects, audio editing, and digital painting. With my background in
+						Computer Engineering I have a good amount of coding experience in HTML, Java, javascript, CSS, and C++.
 					</p>
 			</div>
 
