changing img class name

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<h1>Julius' Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="My_Headshot" src="./img/My_Headshot.JPEG">
+					<img class="My-Headshot" src="./img/My_Headshot.JPEG">
 					<h2>About Me</h2>
 					<p>My name is Julius Gomez I am a 4th year art major at UCSC. I started off my 1st year as a Computer
 						Engineering major. I focus in visual effects, audio editing, and digital painting. With my background in
