--- a/lab2/index.html
+++ b/lab2/index.html
@@ -7,7 +7,14 @@
 	<body>
 		<div id="content">
 			<h1>Hello World</h1>
-			
+
+			<p>
+				My name is Julius, I am an art major and I have a large amount of programming experience as I used to be a
+				computer engineering major. I have a love for basketball, I play when I can but I watch more than i play and 
+				growing up in Ventura which is close to LA I am a Lakers fan. In art I love to learn more and explore more 
+				mediums, I prefer to work in digital media so this class is perfect for me. I am definitly a nerd as I play 
+				DnD and spend most of my time on my computer trying to learn more.
+			</p>
 		</div>
 	</body>
 </html>
