--- a/lab2/index.html
+++ b/lab2/index.html
@@ -13,7 +13,9 @@
 				computer engineering major. I have a love for basketball, I play when I can but I watch more than i play and 
 				growing up in Ventura which is close to LA I am a Lakers fan. In art I love to learn more and explore more 
 				mediums, I prefer to work in digital media so this class is perfect for me. I am definitly a nerd as I play 
-				DnD and spend most of my time on my computer trying to learn more.
+				DnD and spend most of my time on my computer trying to learn more. My partners name is Nicole, she is an art 
+				major. She does not have a lot of programming experience outside of HTMl. She is also from Santa Paula, which 
+				is close to Ventura. Her hobbies include drawing and playing guitar. 
 			</p>
 		</div>
 	</body>
