--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="css/lab.css">
 		<meta charset="utf-8">
 		<title> Lab 2 - My First HTML</title>
 	</head>
@@ -15,7 +16,7 @@
 				mediums, I prefer to work in digital media so this class is perfect for me. I am definitly a nerd as I play 
 				DnD and spend most of my time on my computer trying to learn more. My partners name is Nicole, she is an art 
 				major. She does not have a lot of programming experience outside of HTMl. She is also from Santa Paula, which 
-				is close to Ventura. Her hobbies include drawing and playing guitar. 
+				is close to Ventura. Her hobbies include drawing and playing guitar.
 			</p>
 		</div>
 	</body>
