--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
 						Computer Engineering I have a good amount of coding experience in HTML, Java, javascript, CSS, and C++.
 					</p>
 			</div>
-
+			<div class="assignments major-section">
+				<h2>Labs</h2>
+				<ul>
+					<li><a href="lab2/index.html">Lab 2: Your First HTML</a></li>
+					<li><a href="lab3/">Lab 3: File Structure</a></li>
+					<li><a href="lab4/">Lab 4: File Transfer</a></li>
+					<li><a href="lab5/">Lab 5:</a></li>
+					<li><a href="lab6/">Lab 6:</a></li>
+				</ul>
+			</div>
 		</section>
 		<nav id="links">
 			<!-- Put links to labs here. -->
