--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,52 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
-
-	<!-- Use UTF character set, a good idea with any webpage -->
-  	<meta charset="UTF-8" />
-	<!-- Set viewport so page remains consistently scaled w narrow devices -->
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
-	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-	
-	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
-	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
-</head>
-<body>
-	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
-	<main id="content">
-		<section>
-			<h1>Lab X - Subject/Topic</h1>
-			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
-			</div>
-		</section>
-		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
-		</nav>
-	</main>
-</body>
+	<head>
+		<title>Lab 3: File Structure</title>
+	</head>
+	<body>
+		<h1>Lab 3: File Structure</h1>
+		<p>The idea of this lab was to further create a local file structure on my computer and add index.html files</p>
+		<h2>Challenges</h2>
+		<p>
+			There wasnt much challenge as I used the template that was given, but i ran into some issues with the 
+			links because I wasn't paying attention to capitalization but found the mistake and corrected it.
+		</p>
+		<h3>Results</h3>
+		<p>
+			Bellow are the results of my made file structure, the img, css, js, and index.html 
+			files are all there but I am unable to show them in one picture so they are split up into two.</p>
+		<img src="img/file_structure.png" width=650> <img src="img/inside_the_folders.png" width=650>
+	</body>
 </html>
