Adding in challenges text

--- a/lab4/index.html
+++ b/lab4/index.html
@@ -8,7 +8,8 @@
 		<p>The idea of this was was to get in the habit of using Pseudocoding as a tool to help organize thoughts before coding.</p>
 		<h2>Challenges</h2>
 		<p>
-			
+			My only challenge was learning what the pre and code lines in my index.html file did and why they were needed. Besides that the 
+			lab went very smooth.
 		</p>
 		<h3>Results</h3>
 		<p>
