Adding images to results in lab 4

--- a/lab4/index.html
+++ b/lab4/index.html
@@ -36,6 +36,8 @@
       Test win, draw, lose options
 */
 			</code></pre>
+			<img src="img/js_code.png" width=650> <img src="img/html_code.png" width=650>
+			These are the screenshots of both codes for this lab. The left one is my javascript code while the right is the html code.
 		</p>
 	</body>
 </html>
